fix: 🐛 added pixel font, changed colors due to visib. issues
- Added code coverage styling to be visible on all themes

--- a/common/style.css
+++ b/common/style.css
@@ -6,8 +6,8 @@
 
 @font-face { 
   font-family: "pixel"; 
-  src: url("./assets/fonts/Pixel.woff2") format("woff2"), 
-       url("./assets/fonts/Pixel.woff") format("woff"); 
+  src: url("/assets/fonts/Pixel.woff2") format("woff2"), 
+       url("/assets/fonts/Pixel.woff") format("woff"); 
 } 
 
 
